--- a/intuition.cabal
+++ b/intuition.cabal
@@ -11,6 +11,7 @@ build-type:         Simple
 extra-doc-files:    CHANGELOG.md
 --common warnings
 --   ghc-options: -Wall
+description: Prover for intuitionistic logic.
 
 library
     exposed-modules:
@@ -49,5 +50,5 @@ executable intuition
 
     hs-source-dirs:   app
 
-    -- Base language which the package is written in.
-    default-language: Haskell2010
+-- Base language which the package is written in.
+default-language: Haskell2010
